<resources>
    <string name="app_name">Dialog Boxes</string>
    <string name="button_alert_dialog">AlertDialog</string>
    <string name="button_alert_custom">Custom Dialog</string>
    <string name="button_alert_list">List Dialog</string>
    <string name="button_exit">Exit</string>
    <string name="button_about">About</string>
    <string name="dialog_action_dismiss">@android:string/ok</string>
    <string name="dialog_action_title">AlertDialog Example</string>
    <string name="dialog_about">About Dialog Boxes</string>
    <string name="lots_of_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer
          took a galley of type and scrambled it to make a type specimen book. It has survived not only five
           centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was
            popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
             more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
</resources>
